test/negative/gi77-selfInheritance.cfr
abstract LogicalBus : LogicalBus
    xor type
        CAN
        LIN

bus1 : LogicalBus
